Fixed Table overflow

--- a/page/styles/viewSonglistStyle.css
+++ b/page/styles/viewSonglistStyle.css
@@ -1,17 +1,18 @@
 #songList{
   height: 100%;
-  border: 1px solid black;
 }
-
 #songList table {
   border-collapse: collapse;
+  height: 100%;
+  table-layout: fixed;
+  overflow-y: scroll;
+  display: block;
 }
 #songList table th{
     background: #334e5e;
 }
 #songList table td, table th {
   border: 1px solid #76797c;
-  word-wrap: break-word;
 }
 #songList table tr:first-child th {
   border-top: 0;
@@ -26,4 +27,20 @@
 #songList table tr td:last-child,
 #songList table tr th:last-child {
   border-right: 0;
+}
+
+#songList table tr th.songListTableAlbum{
+  width: 38%;
+}
+#songList table tr th.songListTableNumber{
+  width: 4%;
+}
+#songList table tr th.songListTableTitle{
+  width: 38%;  
+}
+#songList table tr th.songListTableInterpret{
+  width: 15%;  
+}
+#songList table tr th.songListTableDuration{
+  width: 5%;  
 }
